# CLog

./: .gitmodules
CLog/: CMakeLists.txt  main.cpp
